moved app out of app image to prevent needing recompilation everytime a file is changed, filtering on the stop script to only stop containers related to this app

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,18 +1,19 @@
 FROM ubuntu:14.04
 
 VOLUME /data
+VOLUME /www/app
+
 EXPOSE 8000
 
-COPY . /www/app
+COPY ./requirements.txt /tmp
 WORKDIR /www/app
 
 RUN \
-    mkdir -p /data/uploads && \
     apt-get install -y software-properties-common && \
     add-apt-repository ppa:nginx/stable && \
     apt-get update -y && \
     apt-get install -y python-dev python-pip && \
-    pip install -r /www/app/requirements.txt
+    pip install -r /tmp/requirements.txt
 
 CMD python web.py
 
