--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,19 +1,18 @@
 FROM ubuntu:14.04
 
 VOLUME /data
-VOLUME /www/app
-
 EXPOSE 8000
 
-COPY ./requirements.txt /tmp
+COPY . /www/app
 WORKDIR /www/app
 
 RUN \
+    mkdir -p /data/uploads && \
     apt-get install -y software-properties-common && \
     add-apt-repository ppa:nginx/stable && \
     apt-get update -y && \
     apt-get install -y python-dev python-pip && \
-    pip install -r /tmp/requirements.txt
+    pip install -r /www/app/requirements.txt
 
 CMD python web.py
 
